Update table classes

--- a/app/views/example-states.html
+++ b/app/views/example-states.html
@@ -16,8 +16,8 @@
   </ul>
 
   <table class="ucas-info-table">
-    <thead>
-      <tr>
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
         <th class="subject-col">Course</th>
         <th class="status-col" style="width: 160px">Status</th>
         <th class="published-col">Is it on <abbr title="Find postgraduate teacher training" style="text-decoration: underline; text-decoration-style: dotted;">Find</abbr>?</th>
@@ -25,69 +25,69 @@
         <th class="type-col">Vacancies</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td>
+    <tbody class="govuk-table__body">
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">Primary (P123)</a>
           <br>
           <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="nowrap">
           <a href="#">Yes – view online</a>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Open
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Yes (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">Chemistry (PC23)</a>
           <br>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="nowrap">
           <a href="#">Yes – view online</a>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Closed
         </td>
-        <td>
+        <td class="govuk-table__cell">
           No (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">Mathematics (N123)</a>
           <br>
           <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           No – still in draft
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">Geography (PP23)</a>
           <br>
           <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="nowrap">
@@ -96,29 +96,29 @@
         <td class="nowrap">
           Open from<br />3 Mar 2019
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Yes (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">History (DD23)</a>
           <br>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           No – still in draft
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">Physics (D123)</a>
           <br>
           <span class="govuk-body-s">QTS full time</span>
@@ -130,46 +130,46 @@
         <td class="nowrap">
           <a href="#">Yes – view online</a>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Open
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Yes (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">Modern languages (French and Spanish)&nbsp;(W123)</a>
           <br>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
         </td>
         <td class="nowrap">
           No – withdrawn
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Closed
         </td>
-        <td>
+        <td class="govuk-table__cell">
           No
         </td>
       </tr>
-      <!-- <tr>
-        <td>
+      <!-- <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s">Rolled over course (R123)</a>
           <br>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
       </tr> -->
     </tbody>
