--- a/app/views/history/about-your-organisation/index.html
+++ b/app/views/history/about-your-organisation/index.html
@@ -23,41 +23,41 @@
       <p>An organisation can have no accrediting provider, one provider, or many. Add a field to describe each accrediting provider (if there are any), and remove guidance around accrediting provider from the ‘Training with you’ field. Only one will show to applicants at any given time.</p>
 
       <div class="body-text">
-        <table>
-          <thead>
-            <tr>
-              <th>Number of accreditors</th>
-              <th>Providers with that many accreditors</th>
+        <table class="govuk-table">
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+              <th class="govuk-table__header" scope="col">Number of accreditors</th>
+              <th class="govuk-table__header" scope="col">Providers with that many accreditors</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>0 or 1 accreditor</td>
-              <td>865 providers</td>
+          <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">0 or 1 accreditor</td>
+              <td class="govuk-table__cell">865 providers</td>
             </tr>
-            <tr>
-              <td>2 accreditors</td>
-              <td>147 providers</td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">2 accreditors</td>
+              <td class="govuk-table__cell">147 providers</td>
             </tr>
-            <tr>
-              <td>3 accreditors</td>
-              <td>41 providers</td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">3 accreditors</td>
+              <td class="govuk-table__cell">41 providers</td>
             </tr>
-            <tr>
-              <td>4 accreditors</td>
-              <td>13 providers</td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">4 accreditors</td>
+              <td class="govuk-table__cell">13 providers</td>
             </tr>
-            <tr>
-              <td>5 accreditors</td>
-              <td>1 provider</td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">5 accreditors</td>
+              <td class="govuk-table__cell">1 provider</td>
             </tr>
-            <tr>
-              <td>6 accreditors</td>
-              <td>1 provider</td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">6 accreditors</td>
+              <td class="govuk-table__cell">1 provider</td>
             </tr>
-            <tr>
-              <td>7 accreditors</td>
-              <td>1 provider</td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">7 accreditors</td>
+              <td class="govuk-table__cell">1 provider</td>
             </tr>
           </tbody>
         </table>
