--- a/app/views/history/imported-from-ucas.html
+++ b/app/views/history/imported-from-ucas.html
@@ -57,25 +57,25 @@
       <p>Try having one page per subject/provider combination. One search result and page per provider gives a space to explain the different preferences or options available for that provider. <a href="https://trello.com/c/RmjRaDkC/8-one-search-result-and-page-per-provider-gives-a-space-to-explain-the-different-preferences-or-options-available-for-that-provide">Untested hypothesis</a>: Users are making a choice about who will provide their course. Then expressing a preference.</p>
 
       <div class="body-text">
-        <table>
-          <thead>
-            <tr>
-              <th>Route</th>
-              <th>Needs folding into single course</th>
+        <table class="govuk-table">
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+              <th class="govuk-table__header" scope="col">Route</th>
+              <th class="govuk-table__header" scope="col">Needs folding into single course</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>Higher Education</td>
-              <td>Nothing</td>
+          <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">Higher Education</td>
+              <td class="govuk-table__cell">Nothing</td>
             </tr>
-            <tr>
-              <td>SCITT</td>
-              <td>Qualification</td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">SCITT</td>
+              <td class="govuk-table__cell">Qualification</td>
             </tr>
-            <tr>
-              <td>School Direct</td>
-              <td>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">School Direct</td>
+              <td class="govuk-table__cell">
                 <ul class="govuk-list remove-bottom-margin">
                   <li>Qualification</li>
                   <li>Salary</li>
