--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -21,158 +21,150 @@
   </div>
 
   <h2 class="govuk-heading-l">Example states</h2>
-  <table class="ucas-info-table">
-    <thead>
-      <tr>
-        <th class="subject-col">Course</th>
-        <th class="status-col" style="width: 120px">Status</th>
-        <th class="published-col">Last published</th>
-        <th class="applications-col">Applications</th>
-        <th class="type-col">Vacancies?</th>
+  <table class="govuk-table ucas-info-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+        <th class="govuk-table__header subject-col">Course</th>
+        <th class="govuk-table__header status-col" style="width: 120px">Status</th>
+        <th class="govuk-table__header published-col">Last published</th>
+        <th class="govuk-table__header applications-col">Applications</th>
+        <th class="govuk-table__header type-col">Vacancies?</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">New course, just added (N123)</a>
-          <br>
+    <tbody class="govuk-table__body">
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">New course, just added (N123)</a>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">Draft course, not published (DD23)</a>
-          <br>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">Draft course, not published (DD23)</a>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">Draft course, published before (D123)</a>
-          <br>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">Draft course, published before (D123)</a>
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft #2</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           10 August 2018
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Open
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Yes (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">Published course (P123)</a>
-          <br>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">Published course (P123)</a>
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           10 August 2018
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Open
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Yes (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">Published before applications open (PP23)</a>
-          <br>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">Published before applications open (PP23)</a>
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           10 August 2018
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Open from<br />6 October 2018
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Yes (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">Published but full (PC23)</a>
-          <br>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">Published but full (PC23)</a>
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           10 August 2018
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Closed
         </td>
-        <td>
+        <td class="govuk-table__cell">
           No (<a href="#">Edit</a>)
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">Withdrawn course (W123)</a>
-          <br>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">Withdrawn course (W123)</a>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Withdrawn on<br />10 August 2018
         </td>
-        <td>
+        <td class="govuk-table__cell">
           Closed
         </td>
-        <td>
+        <td class="govuk-table__cell">
           No
         </td>
       </tr>
-      <tr>
-        <td>
-          <a href="/course/E65/28ZC" class="govuk-heading-s">Rolled over course (R123)</a>
-          <br>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-0">Rolled over course (R123)</a>
           <span class="govuk-body-s">QTS full time</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
-        <td>
+        <td class="govuk-table__cell">
         </td>
       </tr>
     </tbody>
