--- a/app/views/history/specific-requirements/index.html
+++ b/app/views/history/specific-requirements/index.html
@@ -21,44 +21,44 @@
 
       <p>Depending on the qualification selected in the Education section of apply and the course selected in the Choices section (and that course’s specific course requirements), applicants will get different warnings in the ‘Check form’ section:</p>
 
-      <table class="table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>1: Must&nbsp;have</th>
-            <th>2: Taking</th>
-            <th>3: Equivalency&nbsp;test</th>
-            <th>9: Don’t&nbsp;care</th>
+      <table class="govuk-table">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="col"></th>
+            <th class="govuk-table__header" scope="col">1: Must&nbsp;have</th>
+            <th class="govuk-table__header" scope="col">2: Taking</th>
+            <th class="govuk-table__header" scope="col">3: Equivalency&nbsp;test</th>
+            <th class="govuk-table__header" scope="col">9: Don’t&nbsp;care</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
             <th class="bold">A* – C</th>
-            <td>No alert</td>
-            <td>No alert</td>
-            <td>No alert</td>
-            <td>No alert</td>
+            <td class="govuk-table__cell">No alert</td>
+            <td class="govuk-table__cell">No alert</td>
+            <td class="govuk-table__cell">No alert</td>
+            <td class="govuk-table__cell">No alert</td>
           </tr>
-          <tr>
+          <tr class="govuk-table__row">
             <th class="bold">Pending</th>
-            <td><span class="error-message">Alert</span></td>
-            <td>No alert</td>
-            <td>No alert</td>
-            <td>No alert</td>
+            <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
+            <td class="govuk-table__cell">No alert</td>
+            <td class="govuk-table__cell">No alert</td>
+            <td class="govuk-table__cell">No alert</td>
           </tr>
-          <tr>
+          <tr class="govuk-table__row">
             <th class="bold">Equivalence test</th>
-            <td><span class="error-message">Alert</span></td>
-            <td><span class="error-message">Alert</span></td>
-            <td>No alert</td>
-            <td>No alert</td>
+            <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
+            <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
+            <td class="govuk-table__cell">No alert</td>
+            <td class="govuk-table__cell">No alert</td>
           </tr>
-          <tr>
+          <tr class="govuk-table__row">
             <th class="bold">D – G</th>
-            <td><span class="error-message">Alert</span></td>
-            <td><span class="error-message">Alert</span></td>
-            <td><span class="error-message">Alert</span></td>
-            <td>No alert</td>
+            <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
+            <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
+            <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
+            <td class="govuk-table__cell">No alert</td>
           </tr>
         </tbody>
       </table>
