--- a/app/views/course/vacancies-locations.html
+++ b/app/views/course/vacancies-locations.html
@@ -41,29 +41,29 @@
 
       {% set table %}
         <div class="add-double-bottom-margin">
-          <table>
-            <thead>
-              <tr>
-                <th>Training location</th>
-                <th>Vacancies</th>
+          <table class="govuk-table">
+            <thead class="govuk-table__head">
+              <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="col">Training location</th>
+                <th class="govuk-table__header" scope="col">Vacancies</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>Main Site</td>
-                <td>
+            <tbody class="govuk-table__body">
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Main Site</td>
+                <td class="govuk-table__cell">
                   {{ macros.checkboxGroup(course.programmeCode + '-vacancies-1', fields, errors) }}
                 </td>
               </tr>
-              <tr>
-                <td>Pool Hayes Primary School</td>
-                <td>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Pool Hayes Primary School</td>
+                <td class="govuk-table__cell">
                   {{ macros.checkboxGroup(course.programmeCode + '-vacancies-2', fullPartfields, errors) }}
                 </td>
               </tr>
-              <tr>
-                <td>St Mary’s Catholic Primary School</td>
-                <td>
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">St Mary’s Catholic Primary School</td>
+                <td class="govuk-table__cell">
                   {{ macros.checkboxGroup(course.programmeCode + '-vacancies-3', fields, errors) }}
                 </td>
               </tr>
