--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -6,16 +6,16 @@
 
 {% set table %}
   <div class="add-double-bottom-margin">
-    <table>
-      <thead>
-        <tr>
-          <th>Training locations with vacancies</th>
+    <table class="govuk-table">
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th class="govuk-table__header" scope="col">Training locations with vacancies</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="govuk-table__body">
         {% for s in course.schools %}
-          <tr>
-            <td>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">
               <div class="multiple-choice">
                 <input
                   id="checkbox-part-{{ loop.index }}"
