--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -32,25 +32,25 @@
     </div>
   </div>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th style="width: 40px">Code</th>
-        <th>Name</th>
-        <th>Label</th>
-        <!-- <th style="width: 20%">Courses</th>
-        <th style="width: 20%">Content</th> -->
+  <table class="govuk-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+        <th class="govuk-table__header" style="width: 40px">Code</th>
+        <th class="govuk-table__header" scope="col">Name</th>
+        <th class="govuk-table__header" scope="col">Label</th>
+        <!-- <th class="govuk-table__header" style="width: 20%">Courses</th>
+        <th class="govuk-table__header" style="width: 20%">Content</th> -->
       </tr>
     </thead>
-    <tbody>
+    <tbody class="govuk-table__body">
       {% for school in schools %}
-      <tr>
-        <td><strong class="bold-medium">{{ school.code }}</strong></td>
-        <td>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell"><strong class="bold-medium">{{ school.code }}</strong></td>
+        <td class="govuk-table__cell">
           <a href="/location/{{ school.code }}" class="bold">{{ school.name }}</a><br />
           {{ school.address }}
         </td>
-        <td>
+        <td class="govuk-table__cell">
           {% for type in data[school.code + '-type'] %}
             <span class="phase-tag phase-tag-small">{{ type }}</span><br />
           {% endfor %}
@@ -58,8 +58,8 @@
             <span class="phase-tag phase-tag-small phase-tag-no-content">None</span>
           {% endif %}
         </td>
-        <!-- <td>5 courses</td>
-        <td><span class="phase-tag phase-tag-small phase-tag-no-content">Empty</span></td> -->
+        <!-- <td class="govuk-table__cell">5 courses</td>
+        <td class="govuk-table__cell"><span class="phase-tag phase-tag-small phase-tag-no-content">Empty</span></td> -->
       </tr>
       {% endfor %}
     </tbody>
