--- a/app/views/history/courses-and-tabs/index.html
+++ b/app/views/history/courses-and-tabs/index.html
@@ -1,15 +1,9 @@
-
 {% extends "layout.html" %}
 {% set title = 'Courses and tabs' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
 {% block content %}
-
-  <div class="breadcrumbs">
-    <ol>
-      <li><a href="/history">Design history</a></li>
-    </ol>
-  </div>
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
   <p>This is a visualisation of course information structured by:</p>
