--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -53,6 +53,7 @@
     html: 'This is a prototype of a new service. Some parts of this prototype do not work yet.'
   }) }}
 
+  {% block breadcrumbs %}{% endblock %}
   {% block afterPhaseBanner %}{% endblock %}
 {% endblock %}
 
