--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -2,16 +2,20 @@
 {% set title = 'About your organisation' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
+{% block breadcrumbs %}
+  {{
+    govukBreadcrumbs({
+      items: [
+        {
+          href: "/",
+          text: data['training-provider-name']
+        }
+      ]
+    })
+  }}
+{% endblock %}
+
 {% block content %}
-
-
-  <div class="breadcrumbs">
-    <ol>
-      {% if value('multi-organisation') %}<li><a href="/">Organisations</a></li>{% endif %}
-      <li><a href="/">{{ data['training-provider-name']}}</a></li>
-    </ol>
-  </div>
-
   {% set message %}
     {% if showMessage %}
       <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1">
