--- a/app/views/history/course-field-guidance/index.html
+++ b/app/views/history/course-field-guidance/index.html
@@ -2,14 +2,9 @@
 {% extends "layout.html" %}
 {% set title = 'Contextual guidance on course fields' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
 {% block content %}
-
-  <div class="breadcrumbs">
-    <ol>
-      <li><a href="/history">Design history</a></li>
-    </ol>
-  </div>
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
   {% set contents = [
