--- a/app/views/history/details-from-ucas/index.html
+++ b/app/views/history/details-from-ucas/index.html
@@ -1,15 +1,9 @@
-
 {% extends "layout.html" %}
 {% set title = 'Details from UCAS' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
 {% block content %}
-
-  <div class="breadcrumbs">
-    <ol>
-      <li><a href="/history">Design history</a></li>
-    </ol>
-  </div>
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
   {{ macros.screenshot('Course with UCAS details section', 'course', '/public/images/history/details-from-ucas/thumbnails/01-course.png', '/public/images/history/details-from-ucas/01-course.png', '') }}
