--- a/app/views/history/publish-changes/iteration-aug-15.html
+++ b/app/views/history/publish-changes/iteration-aug-15.html
@@ -1,14 +1,10 @@
 {% extends "layout.html" %}
 {% set title = 'Publishing workflow – iteration 15 August' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
 {% block content %}
 <main id="content" role="main design-history">
-  <div class="breadcrumbs dont-print">
-    <ol>
-      <li><a href="/history">Design history</a></li>
-    </ol>
-  </div>
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
   <div class="govuk-grid-row">
