--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -1,15 +1,9 @@
 {% extends "layout.html" %}
 {% set title = 'Rethinking the publish workflow' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
 {% block content %}
-
-  <div class="breadcrumbs">
-    <ol>
-      <li><a href="/history">Design history</a></li>
-    </ol>
-  </div>
-
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
   <div class="govuk-grid-row">
