--- a/app/views/history/story-map-aug-1/index.html
+++ b/app/views/history/story-map-aug-1/index.html
@@ -1,15 +1,10 @@
-
 {% extends "layout.html" %}
 {% set title = 'Story map – 1 August 2018' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
 {% block content %}
 <main id="content" role="main design-history">
-  <div class="breadcrumbs dont-print">
-    <ol>
-      <li><a href="/history">Design history</a></li>
-    </ol>
-  </div>
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
   <div class="govuk-grid-row">
