--- a/app/views/history/what-is-a-course.html
+++ b/app/views/history/what-is-a-course.html
@@ -1,15 +1,9 @@
 {% extends "layout.html" %}
 {% set title = 'What is a course?' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
 {% block content %}
-
-  <div class="breadcrumbs">
-    <ol>
-      <li><a href="/history">Design history</a></li>
-    </ol>
-  </div>
-
   <h1 class="govuk-heading-xl">{{ title }}</h1>
   <p>
     <a href="https://docs.google.com/presentation/d/1QgjOu_xpzZGDP_ylMIKzDL8CgW1TvtVKICb0P8YiTWQ/edit?usp=sharing">Slide deck</a><br />
