--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -1,17 +1,20 @@
 {% extends "layout.html" %}
 {% block pageTitle %}Request access for someone{% endblock %}
 
+{% block breadcrumbs %}
+  {{
+    govukBreadcrumbs({
+      items: [
+        {
+          href: "/",
+          text: data['training-provider-name']
+        }
+      ]
+    })
+  }}
+{% endblock %}
+
 {% block content %}
-
-
-
-  <div class="breadcrumbs">
-    <ol>
-      {% if value('multi-organisation') %}<li><a href="/">Organisations</a></li>{% endif %}
-      <li><a href="/">{{ data['training-provider-name']}}</a></li>
-    </ol>
-  </div>
-
   {% set message %}
     {% if showMessage %}
       <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
