--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -239,41 +239,52 @@
 #}
 {% macro radioGroup(name, fields, errors = false, index = 0) %}
   {% set e = error(name, errors) %}
-  <div class="form-group {% if e %} form-group-error{% endif %}">
-  {% if e %}
-    <span class="error-message">
-      {{ e.title }}
-    </span>
-  {% endif %}
-  {% for field in fields %}
-    {% set i = loop.index + index %}
-    {% if field.or %}
-      <p class="form-block form-block--or">or</p>
-    {% else %}
-      <div class="multiple-choice" data-target="radio-{{ name }}-part-{{ i }}-extra">
-        <input
-          id="radio-{{ name }}-part-{{ i }}"
-          type="radio"
-          name="{{ name }}"
-          value="{{ field.name }}"
-          {{ checked(name, field.name) }}
-        >
-        <label for="radio-{{ name }}-part-{{ i }}">
-          {% if field.text %}
-            <span class="bold">{{ field.name }}</span><br />
-            {{ field.text | safe }}
-          {% else %}
-            {{ field.name }}
-          {% endif %}
-        </label>
-      </div>
-      {% if field.more %}
-        <div class="panel panel-border-wide js-hidden" id="radio-{{ name }}-part-{{ i }}-extra">
-          {{ field.more | safe }}
-        </div>
-      {% endif %}
+  <div class="govuk-form-group {% if e %} govuk-form-group--error{% endif %}">
+    {% if e %}
+      <span class="govuk-error-message">
+        {{ e.title }}
+      </span>
     {% endif %}
-  {% endfor %}
+
+    <div class="govuk-radios govuk-radios--conditional" data-module="radios">
+      {% for field in fields %}
+        {% set i = loop.index + index %}
+        {% if field.or %}
+          <div class="govuk-radios__divider">or</div>
+        {% else %}
+          <div class="govuk-radios__item">
+            <input
+              class="govuk-radios__input"
+              id="radio-{{ name }}-part-{{ i }}"
+              type="radio"
+              name="{{ name }}"
+              value="{{ field.name }}"
+              {% if field.more %}data-aria-controls="radio-{{ name }}-part-{{ i }}-extra"{% endif %}
+              {{ checked(name, field.name) }}
+            >
+            <label
+              class="govuk-label govuk-radios__label{% if field.text %} govuk-label--s{% endif %}"
+              for="radio-{{ name }}-part-{{ i }}"
+              {% if field.text %}aria-describedby="radio-{{ name }}-part-{{ i }}-hint"{% endif %}
+            >
+              {{ field.name }}
+            </label>
+            {% if field.text %}
+              <span
+                class="govuk-hint govuk-radios__hint"
+                id="radio-{{ name }}-part-{{ i }}-hint">
+                  {{ field.text | safe }}
+              </span>
+            {% endif %}
+          </div>
+          {% if field.more %}
+            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="radio-{{ name }}-part-{{ i }}-extra">
+              {{ field.more | safe }}
+            </div>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
 {% endmacro %}
 
