--- a/app/views/location.html
+++ b/app/views/location.html
@@ -35,7 +35,7 @@
       </dl>
       <hr class="govuk-section-break govuk-section-break--visible" /> -->
 
-      {{ macros.textbox(school.code + '-location-website', 'Website (optional)', 'For example, a school website', 'form-control-full', null, errors) }}
+      {{ macros.textbox(school.code + '-location-website', 'Website (optional)', 'For example, a school website', 'govuk-!-width-full', null, errors) }}
       {{ macros.textbox(school.code + '-urn', 'School Unique Reference Number (URN) (optional)', 'This is the unique reference number allocated to all schools by Edubase.', 'form-control-small', null, errors) }}
 
       <hr class="govuk-section-break govuk-section-break--visible" />
@@ -159,8 +159,8 @@
 
 
       <!--
-      {{ macros.textbox(school.code + '-building-and-street', 'Building and street', null, 'form-control-full', null, errors) }}
-      {{ macros.textbox(school.code + '-building-and-street-2', null, null, 'form-control-full', null, errors) }}
+      {{ macros.textbox(school.code + '-building-and-street', 'Building and street', null, 'govuk-!-width-full', null, errors) }}
+      {{ macros.textbox(school.code + '-building-and-street-2', null, null, 'govuk-!-width-full', null, errors) }}
 
       {{ macros.textbox(school.code + '-organisation-town-or-city', 'Town or city', null, 'form-control', null, errors) }}
       {{ macros.textbox(school.code + '-county', 'County', null, 'form-control', null, errors) }}
